# oNeura

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  ONEURA_DEMO_REVIEW_REPORT.md  README.md  TODO.md  anthropic_credit_request_draft.md  pyproject.toml  restructure.py
core/: Cargo.toml  NOVEL_OPPORTUNITIES.md  PLAN_EVOLUTION_EXTENSIONS.md  README.md  SALVAGE_REPORT.md
core/cuda/: fep.cu  hh_step.cu  motor.cu  sensory.cu  stdp.cu  world.cu
core/demos/: demo_drosophila_gpu.py
core/docs/: METHODS_MULTISCALE_PAPER.md
core/examples/: native_terrarium_stack.rs  terrarium_substrate.rs
core/papers/: doom_brain_paper.md
core/specs/: terrarium_molecular_assets.json  terrarium_quantum_descriptor_cache.json
core/src/: ant_colony.rs  atomistic_chemistry.rs  atomistic_topology.rs  biofilm_dynamics.rs  bioremediation.rs  celegans.rs  cellular_metabolism.rs  circadian.rs  climate_scenarios.rs  consciousness.rs  constants.rs  dishbrain_pong.rs  doom_brain.rs  drosophila.rs  drosophila_population.rs  drug_discovery.rs  eco_evolutionary_feedback.rs  ecology_events.rs  ecosystem_integration.rs  enzyme_engineering.rs  enzyme_evolution.rs  enzyme_probes.rs  fep.rs  field_coupling.rs  fly_metabolism.rs  gene_expression.rs  glia.rs  guild_latent.rs  horizontal_gene_transfer.rs  lib.rs  metabolic_flux.rs  microbiome_assembly.rs  microtubules.rs  molecular_atmosphere.rs  molecular_dynamics.rs  motor.rs  network.rs  neural_molecular_simulator.rs  neuron_arrays.rs  nutrient_cycling.rs  (+48 more)
core/src/botany/: arabidopsis.rs  genome.rs  metabolome.rs  mod.rs  morphology.rs  physiology_bridge.rs  species.rs  visual_phenotype.rs
core/src/celegans/: assays.rs  physiology.rs
core/src/cuda/: cuda_md.cuh  cuda_md.rs  mod.rs
core/src/drosophila/: assays.rs
core/src/gpu/: glia.rs  hh_gating.rs  membrane_integration.rs  metabolism.rs  mod.rs  receptor_binding.rs  state.rs  synapse_cleft.rs  synapse_step.rs  terrarium_substrate.rs  whole_cell_rdme.rs
core/src/metal/: cleft_dynamics.metal  glia.metal  hill_binding.metal  md_forces.metal  membrane_euler.metal  metabolism.metal  pharmacology.metal  synapse_step.metal  terrarium_substrate.metal
core/src/pharma_lab/: library.rs  mod.rs  smiles.rs
core/src/terrarium/: archive.rs  atmosphere.rs  biomechanics.rs  checkpoint.rs  climate_driver.rs  conservation.rs  emergent_color.rs  emergent_rates.rs  entropy.rs  evolve.rs  explicit_microbe_impl.rs  fauna.rs  field.rs  flora.rs  fruit_reproduction.rs  fruit_state.rs  genotype.rs  geochemistry.rs  inventory_geochemistry.rs  inventory_geochemistry_registry.rs  inventory_reaction_network.rs  inventory_species_registry.rs  litter_surface.rs  material_exchange.rs  material_inventory.rs  mesh.rs  mod.rs  organism_identity.rs  packet.rs  plant_species.rs  presets.rs  probes.rs  render_impl.rs  render_stateful.rs  reporting.rs  ribbon.rs  scale_level.rs  seed_microsite.rs  shape_projection.rs  snapshot.rs  (+8 more)
core/src/whole_cell/: expression.rs  initialization.rs  spatial.rs  stochastic_expression.rs  tests.rs
core/tests/: test_ecology_events.rs  test_monod_terrarium.rs
demos/: README.md  bio_lora_molecular_demo.py  demo_3d_flight.py  demo_beyond_ann.py  (+26 more)
oneura-terrarium/: Cargo.toml
oneura-terrarium/src/: lib.rs
oneuro-3d/: Cargo.toml  README.md
oneuro-3d/src/shaders/: terrarium_bio.wgsl  terrarium_gpu_material.wgsl  terrarium_scene_material.wgsl
oneuro-metal/: Cargo.toml  README.md  _vizdoom.ini  fix_ecosystem.py  fix_flora.py  fix_main_errors.py  fixup_struct.py  insert_features.py  insert_tests.py  libstochastic_expression.rlib  pyproject.toml  ungate_all.py  ungate_all_v2.py  wire_ecosystem.py  wire_submodules.py
oneuro-metal/cuda/: synaptic.cu
oneuro-metal/demos/: demo_doom_brain_gpu.py  demo_vizdoom_metal.py
oneuro-metal/docs/: ARCHITECTURE.md  CRATE_EXTRACTION_PLAN.md  METHODS_MULTISCALE_PAPER.md  NEXT_STEPS.md  REPRODUCING_RESULTS.md
oneuro-metal/examples/: native_terrarium_stack.rs  terrarium_substrate.rs
oneuro-metal/papers/: doom_brain_paper.md
oneuro-metal/src/: atomistic_chemistry.rs  biofilm_dynamics.rs  bioremediation.rs  body.rs  brain_regions.rs  celegans.rs  cellular_metabolism.rs  circadian.rs  climate_scenarios.rs  cross_scale_coupling.rs  dishbrain_pong.rs  drosophila.rs  drosophila_population.rs  drug_discovery.rs  eco_evolutionary_feedback.rs  ecology_events.rs  ecology_fields.rs  ecosystem_integration.rs  enzyme_engineering.rs  enzyme_evolution.rs  enzyme_probes.rs  fly_metabolism.rs  glia.rs  horizontal_gene_transfer.rs  lib.rs  metabolic_flux.rs  metabolism.rs  microbiome_assembly.rs  molecular_atmosphere.rs  molecular_dynamics.rs  network.rs  neural_molecular_simulator.rs  neuron_arrays.rs  nutrient_cycling.rs  pharmacology.rs  phylogenetic_tracker.rs  plant_cellular.rs  plant_competition.rs  plant_organism.rs  population_genetics.rs  (+48 more)
oneuro-metal/src/cuda/: state.rs
oneuro-metal/src/gpu/: calcium_dynamics.rs  diffusion_3d.rs  gene_expression.rs  md_gpu.rs  membrane_integration.rs  metabolism.rs  microtubules.rs  mod.rs  pharmacology.rs  receptor_binding.rs  second_messenger.rs  state.rs  synapse_step.rs  terrarium_substrate.rs  whole_cell_rdme.rs
oneuro-metal/src/metal/: calcium_ode.metal  diffusion_3d.metal  gene_expression.metal  hh_gating.metal  hill_binding.metal  md_integrate.metal  membrane_euler.metal  microtubules.metal  neighbor_list.metal  second_messenger.metal  synapse_step.metal  terrarium_substrate.metal  whole_cell_rdme.metal
oneuro-metal/src/terrarium_world/: biomechanics.rs  calibrator.rs  explicit_microbe_impl.rs  flora.rs  genotype.rs  mesh.rs  packet.rs  render_impl.rs  render_stateful.rs  render_utils.rs  snapshot.rs  soil.rs  tests.rs
oneuro-metal/src/whole_cell/: complex_assembly.rs  initialization.rs  local_chemistry.rs  rdme_drive.rs  stochastic_expression.rs  tests.rs
oneuro-metal/tests/: test_ecology_events.rs  test_monod_terrarium.rs
oneuro-metal/web/: md_visualization.html  terrarium.html
terrarium/cli/: Cargo.toml
terrarium/desktop/: Cargo.toml
terrarium/desktop/src/shaders/: terrarium_bio.wgsl
(+394 files in other folders)
