[package]
name = "oneura-terrarium"
version = "0.1.0"
edition = "2021"
description = "Multi-scale biological terrarium simulation — extracted from oneuro-metal"
license = "CC-BY-NC-4.0"
repository = "https://github.com/oneura-ai/oneura"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
advanced = []   # Enables guild infrastructure, explicit microbes, snapshot
render = []     # Enables 3D rendering pipeline
