[package]
name = "oneuro-3d"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "terrarium_3d"
path = "src/bin/terrarium_3d.rs"

[dependencies]
bevy = "0.15"
rand = "0.8"
oneuro-metal = { path = "../oneuro-metal", default-features = false }

[profile.release]
opt-level = 3

[profile.fast]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
