[package]
name = "oneuro-metal"
version = "0.1.0"
edition = "2021"
authors = ["Bobby Price"]
description = "GPU-accelerated molecular brain simulator — the world's first Metal-powered biophysical neural engine"
license = "MIT"
repository = "https://github.com/bobbyprice/oNeuro"
keywords = ["neuroscience", "gpu", "metal", "hodgkin-huxley", "brain-simulation"]
categories = ["science", "simulation"]

[lib]
name = "oneuro_metal"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3/extension-module"]
cuda = ["cudarc"]

[dependencies]
pyo3 = { version = "0.28", optional = true, features = ["extension-module"] }
cudarc = { version = "0.12", optional = true, features = ["std", "nvrtc"] }
ndarray = "0.16"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minifb = "0.27"
font8x8 = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"

[build-dependencies]
pyo3-build-config = "0.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
