[package]
name = "oneuro-metal"
version = "0.1.0"
edition = "2021"
authors = ["Bobby Price"]
description = "GPU-accelerated molecular brain simulator — the world's first Metal-powered biophysical neural engine"
license = "MIT"
repository = "https://github.com/bobbyprice/oNeuro"
keywords = ["neuroscience", "gpu", "metal", "hodgkin-huxley", "brain-simulation"]
categories = ["science", "simulation"]

[lib]
name = "oneuro_metal"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3/extension-module"]
cuda = ["cudarc"]
nuclear_physics = []
satellite_tests = []
terrarium_advanced = []
terrarium_render = []
web = ["dep:tokio", "dep:axum", "dep:tower-http", "dep:futures-util"]

[dependencies]
pyo3 = { version = "0.28", optional = true, features = ["extension-module"] }
cudarc = { version = "0.12", optional = true, features = ["std", "nvrtc"] }
ndarray = "0.16"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
futures-util = { version = "0.3", optional = true }
minifb = "0.27"
font8x8 = "0.3"
image = "0.25"
gif = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"

[[bin]]
name = "terrarium_web"
path = "src/bin/terrarium_web.rs"
required-features = ["web"]

[build-dependencies]
pyo3-build-config = "0.28"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
codegen-units = 16

# Fast profile: optimized enough for world construction, won't OOM the linker
[profile.fast]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
