[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oneuro-metal"
version = "0.1.0"
description = "GPU-accelerated molecular brain simulator"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Blackweb AI", email = "bobby@blackweb.ai"},
]
keywords = ["neuroscience", "gpu", "metal", "brain-simulation", "hodgkin-huxley"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "oneuro_metal"
