[package]
name = "oneura-cli"
version = "0.1.0"
edition = "2021"
authors = ["Bobby Price"]
description = "GPU-accelerated molecular brain simulator CLI tools"
license = "MIT"
repository = "https://github.com/bobbyprice/oNeura"
default-run = "terrarium"

[features]
default = []
web = ["dep:tokio", "dep:axum", "dep:tower-http", "dep:futures-util", "oneura-core/web"]

[dependencies]
oneura-core = { path = "../../core", features = ["terrarium_advanced", "terrarium_render"] }
ndarray = "0.16"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minifb = "0.27"
font8x8 = "0.3"
image = "0.25"
gif = "0.13"

# Web dependencies for terrarium_web
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
futures-util = { version = "0.3", optional = true }

[[bin]]
name = "terrarium_web"
path = "src/bin/terrarium_web.rs"
required-features = ["web"]
